; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_optabs.c_init_integral_libfuncs.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_optabs.c_init_integral_libfuncs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BITS_PER_WORD = common dso_local global i32 0, align 4
@LONG_LONG_TYPE_SIZE = common dso_local global i32 0, align 4
@word_mode = common dso_local global i32 0, align 4
@MODE_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @init_integral_libfuncs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_integral_libfuncs(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @BITS_PER_WORD, align 4
  %9 = mul nsw i32 2, %8
  store i32 %9, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* @LONG_LONG_TYPE_SIZE, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @LONG_LONG_TYPE_SIZE, align 4
  store i32 %14, i32* %7, align 4
  br label %15

15:                                               ; preds = %13, %3
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @word_mode, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @MODE_INT, align 4
  %20 = call i32 @mode_for_size(i32 %18, i32 %19, i32 0)
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @init_libfuncs(i32 %16, i32 %17, i32 %20, i8* %21, i32 %22)
  ret void
}

declare dso_local i32 @init_libfuncs(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @mode_for_size(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
